# Lantern

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: dimly_lit_maze.hpp  flicker.hpp  full_ui.hpp  generator.hpp  lantern.main.cpp  maze_stack.hpp  notify_label.hpp  palette.hpp
